Alterações de filme, sessão e dados padrão para crianção de Role de usuário "Manager" e "Collaborator"

--- a/appsettings.json
+++ b/appsettings.json
@@ -3,12 +3,16 @@
         "DefaultConnection": "Data Source=DESKTOP-HV92L00\\SQLEXPRESS;Initial Catalog=CinemaDataBase;Integrated Security=True"
     },
     "UserSettings": {
-        //"UserName": "manager",
-        //"UserEmail": "manager@gmail.com",
-        //"UserPassword": "!@#Senha123",
-        "UserName": "collaborator",
-        "UserEmail": "collaborator@gmail.com",
-        "UserPassword": "!@#Senha123"
+        "Manager": {
+            "UserName": "manager",
+            "UserEmail": "manager@gmail.com",
+            "UserPassword": "!@#Senha123"
+        },
+        "Collaborator": {
+            "UserName": "collaborator",
+            "UserEmail": "collaborator@gmail.com",
+            "UserPassword": "!@#Senha123"
+        }
     },
     "Logging": {
         "LogLevel": {
