Alterações na Sessão ao exibir erro.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Data Source=DESKTOP-HV92L00\\SQLEXPRESS;Initial Catalog=CinemaDataBase;Integrated Security=True"
+        "DefaultConnection": "Data Source=;Initial Catalog=;Integrated Security=True"
     },
     "UserSettings": {
         "Manager": {
